tests/paczka1/fuzzy1/32438252.err
Error in line 8: ofTzl S497 -2,0
Error in line 16: 64PWtKr S497 57,9
Error in line 24: 64PWtKr A957 26,9
Error in line 27: FFX4M6S S497 -2,0
Error in line 26: FFX4M6S S497 66,1
Error in line 31: BHK9hrRDh A810 7,3
